--- a/style.css
+++ b/style.css
@@ -129,10 +129,14 @@ body {
   font-style: normal;
   max-width: 750px;
   margin: 30px auto;
-  background: #f4f4f4;
+  background: #faf7f3;
   padding: 20px;
   border-radius: 10px;
   box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+}
+
+.container {
+  background-color: #faf7f3;
 }
 
 .result,
